# gcodemcp

./: Cargo.toml  DISTRIBUTION.md  Dockerfile  README.md  ROADMAP.md  server.json
.github/workflows/: ci.yml  release.yml
src/: main.rs  prompts.rs  resources.rs  tools.rs
src/data/: materials.rs  mod.rs  printers.rs  reference.rs
src/gcode/: analyzer.rs  generator.rs  machine.rs  mod.rs  modifier.rs  optimizer.rs  parser.rs  types.rs
src/mcp/: server.rs
tests/: mcp_stdio.rs
