[package]
name = "gcode-mcp"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"
description = "MCP server for 3D printer G-code creation, analysis, and optimization"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ak-the-dev/gcodemcp"
homepage = "https://github.com/ak-the-dev/gcodemcp"
keywords = ["mcp", "gcode", "3d-printing", "rust"]
categories = ["command-line-utilities", "simulation"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
