[package]
name = "gcode-mcp"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"
description = "Analyze, validate, generate, and post-process 3D printer G-code over MCP"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ak-the-dev/gcodemcp"
homepage = "https://github.com/ak-the-dev/gcodemcp"
documentation = "https://github.com/ak-the-dev/gcodemcp#readme"
keywords = ["mcp", "mcp-server", "gcode", "3d-printing", "slicer"]
categories = ["command-line-utilities", "simulation"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
